--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.7",
+    "@reduxjs/toolkit": "^1.9.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
